<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.self.bryan.beams_forcescalculator.CantileverActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cantilever_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/cantilever_image_desc"/>

        <TableRow
            android:id="@+id/elasticity_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/cantilever_image">

            <TextView
                android:text="@string/enter_elasticity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/cantilever_elasticity_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"/>

        </TableRow>

        <TableRow
            android:id="@+id/inertia_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/elasticity_row">

            <TextView
                android:text="@string/enter_inertia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/cantilever_inertia_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"/>

        </TableRow>

        <TableRow
            android:id="@+id/length_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/inertia_row">

            <TextView
                android:text="@string/enter_beam_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/cantilever_length_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"/>

        </TableRow>

        <TableRow
            android:id="@+id/force_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/length_row">

            <TextView
                android:text="@string/enter_force"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/cantilever_force_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"/>

        </TableRow>

        <TableRow
            android:id="@+id/length_a_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/force_row">

            <TextView
                android:text="@string/enter_a_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/cantilever_length_a_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"/>

        </TableRow>

        <TableRow
            android:id="@+id/uniform_load_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/length_a_row">

            <TextView
                android:text="@string/enter_uniform_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/cantilever_uniform_load_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"/>

        </TableRow>

        <TableRow
            android:id="@+id/button_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="center"
            android:layout_below="@id/uniform_load_row">

            <Button
                android:id="@+id/calculate_button"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calculate_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickCalculateButton"/>

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/save_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickSaveButton"/>

            <Button
                android:id="@+id/load_button"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/load_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickLoadButton"/>

        </TableRow>

        <TextView
            android:id="@+id/cantilever_results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@id/button_row"/>

    </RelativeLayout>

</ScrollView>
